v3.4.1 (2021.02.xx)
  - Fix bug that allowed startup tasks to execute out of order on systems with a low precision system clock
  - Fix bug that caused all EPG data to be resent to Kodi during startup regardless of a detected change to the data
  - Fix bug that caused "Timer Deleted" toast messages for timers associated with an existing recording

v3.4.0 (2021.01.30)
  - Update libhdhomerun library to version 20201023
  - Update SQLite database engine to version 3.34.1
  - Add "Export discovery diagnostic data" PVR Client Specific setting
  - Add "HEVC Channels" channel group
  - Add support for persistent Recorded TV watched/unwatched (play count) flags
  - Change "DVR stream read operation minimum size" advanced option to default to "Automatic" and allow for an updated range of 4KiB to 64KiB
  - Replace forward slash characters with hyphen characters in Recorded TV folder names to work around Kodi limitation
  - Trigger an XMLTV reload operation during startup if there are missing channel(s) in the Electronic Program Guide (EPG) listings

v3.3.4 (2020.12.09)
  - Update SQLite database engine to version 3.34.0
  - Update cURL library to version 7.74.0
  - (Linux) Retarget ARMEL build to require ARMv6 architecture

v3.3.3 (2020.09.30)
  - Update SQLite database engine to version 3.33.0
  - Update cURL library to version 7.72.0
  - Fix bug that reported recording rule start time padding as both the start and end time padding
  - Add "Report actual start and end times for upcoming timers" Interface option

v3.3.2 (2020.07.15)
  - Update SQLite database engine to version 3.32.3
  - Update cURL library to version 7.71.1
  - (Linux/OSX) Enable missing compiler optimization flags during build

v3.3.1 (2020.05.28)
  - Update SQLite database engine to version 3.32.1
  - Fix bug preventing recordings from being loaded when duplicate series identifiers exist
  - Report HDHomeRun device version information in device discovery logs